# speck

./: .gitignore  CMakeLists.txt  run.sh
src/: levenshtein_distance.cc  levenshtein_distance.h  main.cc  recommend.cc  recommend.h  words.cc  words.h
